<resources>
    <string name="app_name">android_lab4</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="not_empty">This field cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_cancel_form">Do you really want to exit form?</string>
    <string name="exit">Exit</string>
</resources>