<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/main_activity_data_horizontal"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addressLayout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/main_activity_data_horizontal"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintEnd_toStartOf="@+id/edit_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintBottom_toTopOf="@id/commentLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentLayout"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/main_activity_data_horizontal"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        app:layout_constraintEnd_toStartOf="@+id/edit_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_address"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_activity_data_horizontal"
        android:layout_marginEnd="@dimen/main_activity_button_end"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/nameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameLayout"
        app:layout_constraintTop_toTopOf="@id/nameLayout" />

    <ImageButton
        android:id="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_activity_button_end"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/addressLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addressLayout"
        app:layout_constraintTop_toTopOf="@id/addressLayout" />

    <ImageButton
        android:id="@+id/edit_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:layout_marginEnd="@dimen/main_activity_button_end"
        app:layout_constraintBottom_toBottomOf="@id/commentLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/commentLayout"
        app:layout_constraintTop_toTopOf="@id/commentLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>